# agent-skills

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  service.yml
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: feature-request.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml
.github/workflows/: check-skill-links.yml  pii-scan.yml
.semaphore/: evals-schedule.yml  evals.yml  semaphore.yml
skills/confluent-cloud-cdc-tableflow/: SKILL.md
skills/confluent-cloud-dbt/: SKILL.md
skills/confluent-skill-creator/: .env.template  .gitignore  SKILL.md  credentials.yaml.template
skills/confluent-skill-reviewer/: SKILL.md
skills/developing-kafka-java-client/: SKILL.md
skills/developing-kafka-python-client/: SKILL.md
skills/flink-udf/: SKILL.md
skills/kafka-schema-registry/: SKILL.md
skills/kafka-streams-programming/: SKILL.md
skills/kafkajs-migration/: SKILL.md
skills/msk-migration/: README.md  SKILL.md
skills/references/: warpstream-optimization.md
skills/schema-registry-adopting/: SKILL.md
skills/shared/: warpstream-optimization.md
skills/skill-review/: SKILL.md
skills/upgrade-kafka-python-client/evals/fixtures/eval-3-async-migration/: producer.py  pyproject.toml
tools/: check-links.sh  check-plugin-versions.sh  dashboard_template.html  export_tokens_csv.py  skill_review_dashboard.py  tag-and-release.sh  validate-skill-version-bump.sh
tools/evals/: README.md  run_evals.py  (+1 more)
(+239 files in other folders)
