[project]
name = "event-processor"
version = "1.0.0"
requires-python = ">=3.9"

dependencies = [
    "confluent-kafka[avro]>=2.6.0,<2.12.0",
    "fastavro",
    "python-dotenv",
    "requests>=2.25.0",
    "fastapi>=0.100.0",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
